cmake_minimum_required(VERSION 2.8)

project(cmake_boost)
find_package(Boost 1.65 COMPONENTS regex REQUIRED)
if(NOT Boost_FOUND)
    message(STATUS "Cannot find boost library")
    return()
endif()
message(STATUS "boost library found")
include_directories(${Boost_INCLUDE_DIR})
add_executable(${PROJECT_NAME} "main.cpp")
target_link_libraries(${PROJECT_NAME} ${Boost_REGEX_LIBRARY})
